--- a/src/data/levels/05a_CPU/08_Instructions (2-5) - Data/chat/en.yml
+++ b/src/data/levels/05a_CPU/08_Instructions (2-5) - Data/chat/en.yml
@@ -10,7 +10,8 @@ main:
 
 php:
   messages:
-  - that language sucks! 🧦
+  - eh?
+  - do people still use that language?
   responses:
   - no, I mean the instruction [inst]
 
