--- a/src/data/levels/05a_CPU/08_Instructions (2-5) - Data/chat/es.yml
+++ b/src/data/levels/05a_CPU/08_Instructions (2-5) - Data/chat/es.yml
@@ -10,7 +10,8 @@ main:
 
 php:
   messages:
-  - ¡ese lenguaje apesta! 🧦
+  - ¿eh?
+  - ¿la gente todavía usa ese lenguaje?
   responses:
   - no, me refiero a la instrucción [inst]
 
