--- a/src/data/levels/03_Cartridge/04_Reading the header/chat/es.yml
+++ b/src/data/levels/03_Cartridge/04_Reading the header/chat/es.yml
@@ -90,7 +90,7 @@ bits:
   messages:
   - si no sabes cómo operar con bits, puedes usar mi biblioteca 📖
   - está en 📄  ~/lib/byte.js~, solo impórtala como otro módulo más y úsala
-  - los métodos que querrás usar son `getFlag`, `highNybbleOf`, `lowNybbleOf` y `buildU8`
+  - los métodos que querrás usar son `getFlag(...)`, `highNybbleOf(...)`, `lowNybbleOf(...)` y `buildU8(...)`
   responses:
   - ¿cómo puedo usar el módulo? [import]
 
