--- a/src/data/levels/05a_CPU/07_Instructions (1-5) - Arithmetic/chat/es.yml
+++ b/src/data/levels/05a_CPU/07_Instructions (1-5) - Arithmetic/chat/es.yml
@@ -21,20 +21,20 @@ howmany:
   - _-_así que revisa _--_📄 _-_ ~/docs/cpu/instructions.es.md~_--_
   responses:
   - necesito ayuda para mover bits 😅 [bits]
-  - necesito ayuda para actualizar las banderas Z y N 😅 [flags]
+  - necesito ayuda para actualizar las banderas ~Z~ y ~N~ 😅 [flags]
 
 bits:
   messages:
   - usa el operador ~<<~ para mover bits a la izquierda, y ~>>~ para mover bits a la derecha
   - por ejemplo
-  - ~0b00001100 << 1~ produciría ~0b00011000~
-  - y ~0b01000001 >> 1~ produciría ~0b00100000~
+  - "```javascript 0b00001100 << 1``` produciría ```javascript 0b00011000```"
+  - y ```javascript 0b01000001 >> 1``` produciría ```javascript 0b00100000```
   responses:
   - así es como mueves bits, ¿pero cómo los rotarías? [rotation]
 
 rotation:
   messages:
-  - para rotar bits a la derecha (digamos, ~0b00000001 >> 1~), tienes que poner el bit 0 (que se pierde luego de mover los bits) en la última posición (bit 7) 
+  - para rotar bits a la derecha (digamos, ```javascript 0b00000001 >> 1```), tienes que poner el bit 0 (que se pierde luego de mover los bits) en la última posición (bit 7) 
   - |-
     por lo que, si tienes un `number`, puedes hacer:
       ```javascript byte.setBit(number >> 1, 7, byte.getBit(number, 0))```
