Improving CPU instructions levels

--- a/src/data/levels/05a_CPU/07_Instructions (1-5) - Arithmetic/chat/en.yml
+++ b/src/data/levels/05a_CPU/07_Instructions (1-5) - Arithmetic/chat/en.yml
@@ -22,6 +22,7 @@ howmany:
   responses:
   - I need help moving bits 😅 [bits]
   - I need help updating the ~Z~ and ~N~ flags 😅 [flags]
+  - understood [end]
 
 bits:
   messages:
