--- a/src/data/levels/05a_CPU/09_Instructions (3-5) - Checks/chat/en.yml
+++ b/src/data/levels/05a_CPU/09_Instructions (3-5) - Checks/chat/en.yml
@@ -3,7 +3,6 @@ main:
   messages:
   - there are only a few checks
   - they are, basically, instructions that compare values with a register or perform logical operations
-  - I don't think you will need help with these
-  - 📚  _-_following _--_📄 _-_ ~/docs/cpu/instructions.en.md~,_--_
-  - _-_implement all the check instructions in your `instructions` object!_--_
+  - I don't think you will need help with these, you're all grown up now
+  - 📚  _-_following _--_📄 _-_ ~/docs/cpu/instructions.en.md~, implement all the check instructions in your `instructions` object!_--_
   responses: []
