Adding interrupt definitions

--- a/src/data/levels/02_Assembly/01_Example program/chat/en.yml
+++ b/src/data/levels/02_Assembly/01_Example program/chat/en.yml
@@ -164,7 +164,7 @@ sta:
     set((m) => m.$canRun = true);
   messages:
   - "`STA` means \"STore Accumulator\""
-  - and as you can see, it writes the content of [A] to a memory location
+  - and as you can see, it writes the content of [A] to a memory address
   - in this example, to the address $4070
   - so now the $4070 cell of the <Memory Viewer> has a $01
   - try running the remaining instructions ⏩
