--- a/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/en.yml
+++ b/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/en.yml
@@ -12,9 +12,10 @@ main:
 
 interrupt:
   messages:
-  - it's a signal that interrupts the current program in order to handle a specific event
+  - it's a signal that pauses the current program in order to handle a specific event
   - when such an event happens, the CPU saves its state ([PC] and flags register) in the stack
-  - and jumps to a well-known memory location (called "vector") associated with that event
+  - and jumps to a well-known memory address (called vector) associated with that event
+  - after handling the event, the execution usually returns to where it was left off
   - "in the NEEES, there are 3 events:"
   - "🔁  <RESET>: Triggered when the system is turned on"
   - "📹  <NMI>: Triggered when the PPU finishes drawing a frame"
