Improving addressing modes levels

--- a/src/data/levels/05a_CPU/07_Instructions (1-5) - Arithmetic/chat/es.yml
+++ b/src/data/levels/05a_CPU/07_Instructions (1-5) - Arithmetic/chat/es.yml
@@ -22,7 +22,7 @@ howmany:
   responses:
   - necesito ayuda para mover bits 😅 [bits]
   - necesito ayuda para actualizar las banderas ~Z~ y ~N~ 😅 [flags]
-  - entendido [end]
+  - ok [end]
 
 bits:
   messages:
