--- a/src/data/levels/05b_PPU/07_VBlank detection/chat/en.yml
+++ b/src/data/levels/05b_PPU/07_VBlank detection/chat/en.yml
@@ -1,7 +1,7 @@
 ---
 main:
   messages:
-  - 🏝️  <VBlank> is a period where the 🖥️  PPU rests at the end of each frame
+  - 🏝️  VBlank is a period where the 🖥️  PPU rests at the end of each frame
   - <{rendering.png}>
   - games need to know when it starts, so they can update the screen without any visible glitches
   - a program can know if it's inside the VBlank period by checking ~bit 7~ of 📊  `PPUStatus` (CPU $2002)
