--- a/src/data/levels/05b_PPU/07_VBlank detection/chat/es.yml
+++ b/src/data/levels/05b_PPU/07_VBlank detection/chat/es.yml
@@ -1,7 +1,7 @@
 ---
 main:
   messages:
-  - 🏝️  <VBlank> es un período en el que la 🖥️  PPU descansa al final de cada frame
+  - 🏝️  VBlank es un período en el que la 🖥️  PPU descansa al final de cada frame
   - <{rendering.png}>
   - los juegos necesitan saber cuándo comienza, para que puedan actualizar la pantalla sin errores visibles
   - un programa puede saber si está dentro del período VBlank comprobando ~bit 7~ de 📊  `PPUStatus` (CPU $2002)
