--- a/src/data/levels/03_Cartridge/07_Integrating our work/chat/es.yml
+++ b/src/data/levels/03_Cartridge/07_Integrating our work/chat/es.yml
@@ -31,6 +31,7 @@ done:
     book.unlock("useCartridge");
   messages:
   - ✅  ¡hecho!
+  - <! 💾  Cartucho integrado.
   - ahora, el ícono 💾  en el emulador brillará ✨
   - puedes alternar entre tu implementación y la rota haciendo clic en él
   - intenta abrir algunos juegos, se verán mucho mejor 😉
